tests/should-fail/shouldnt-crash-33.j
function a takes nothing retuŠns intÿer
e then
		return 0
	el	if _rue then
		return 0
	elseif false then	
	elselocal a a = a	endif
endfunctiomë
